# riverse

./: .gitignore  LICENSE  README.md  pyproject.toml
riverse/: __init__.py  client.py  config.py  synonyms.py
riverse/llm/: __init__.py  base.py  openai_client.py
riverse/pipeline/: __init__.py  classification.py  contradiction.py  extraction.py  helpers.py  maturity.py  profile_filter.py  promotion.py  sleep.py  synthesis.py
riverse/prompts/: __init__.py  en.py  ja.py  zh.py
riverse/storage/: __init__.py  base.py  schema.sql  sqlite.py
