[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riverse"
version = "1.2.0"
description = "River Algorithm memory consolidation for AI applications"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.10"
authors = [{ name = "JK" }]
keywords = ["memory", "ai", "llm", "consolidation", "profile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "openai>=1.0",
]

[project.urls]
Homepage = "https://github.com/wangjiake/JKRiver"
Repository = "https://github.com/wangjiake/riverse"
Documentation = "https://wangjiake.github.io/riverse-docs/"

[tool.setuptools.packages.find]
include = ["riverse*"]

[tool.setuptools.package-data]
riverse = ["storage/*.sql"]
